macrobutton starts out of place and is able to move too high, please fix

--- a/macroButton.css
+++ b/macroButton.css
@@ -1,5 +1,9 @@
 .macroButton-container {
     justify-content: left;
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: move;
 }
 
 .macroButton {
